--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "path-to-regexp": "^8.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "sass": "^1.97.3"
+    "sass": "^1.97.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
